@@ -50,7 +50,7 @@
 
         [TestMethod]
         [ExpectedException(typeof(ArgumentNullException))]
-        public void RaiseIfSelectorIsNullWhenSend()
+        public void ShouldRaiseIfSelectorIsNullWhenSend()
         {
             BaseObject obj = new BaseObject();
 
@@ -59,7 +59,7 @@
 
         [TestMethod]
         [ExpectedException(typeof(InvalidOperationException))]
-        public void RaiseIfBehaviorIsNullWhenSend()
+        public void ShouldRaiseIfBehaviorIsNullWhenSend()
         {
             BaseObject obj = new BaseObject();
 
@@ -68,13 +68,52 @@
 
         [TestMethod]
         [ExpectedException(typeof(InvalidOperationException))]
-        public void RaiseIfSelectorIsUnknownWhenSend()
+        public void ShouldRaiseIfSelectorIsUnknownWhenSend()
         {
             BaseObject obj = new BaseObject();
             BaseBehavior behavior = new BaseBehavior();
             obj.Behavior = behavior;
 
             obj.Send("aMethod", null);
+        }
+
+        [TestMethod]
+        public void SetAndGetValue()
+        {
+            BaseObject obj = new BaseObject(1);
+
+            obj.SetValueAt(0, "anyValue");
+
+            object value = obj.GetValueAt(0);
+
+            Assert.IsNotNull(value);
+            Assert.AreEqual("anyValue", value);
+        }
+
+        [TestMethod]
+        [ExpectedException(typeof(IndexOutOfRangeException))]
+        public void ShouldRaiseIfGetOutOfRange()
+        {
+            BaseObject obj = new BaseObject(1);
+
+            obj.GetValueAt(1);
+        }
+
+        [TestMethod]
+        [ExpectedException(typeof(IndexOutOfRangeException))]
+        public void ShouldRaiseIfSetOutOfRange()
+        {
+            BaseObject obj = new BaseObject(1);
+
+            obj.SetValueAt(1, "anyValue");
+        }
+
+        [TestMethod]
+        [ExpectedException(typeof(NullReferenceException))]
+        public void ShouldRaiseIfNoValues()
+        {
+            BaseObject obj = new BaseObject();
+            obj.SetValueAt(0, "anyValue");
         }
     }
 }
